Fix #35551: the topology mirror setting affected shape key and vertex group but this was confusing as there was no setting visible for it. Now these menus contain an entry to mirror without and with topology mirror.